traces/bug_267.txt
src/femlib/QuadratureFormular.cpp:220: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::QuadratureFormular_T_7 accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


src/femlib/QuadratureFormular.cpp:220:1: initialization of Fem2D::QuadratureFormular_T_7
218.   GQuadraturePoint<R2>(0.2652238803946/2,R2(0.2385615300181,0.2385615300181))
219.   };
220. > const GQuadratureFormular<R2> QuadratureFormular_T_7(7,15,P_QuadratureFormular_T_7);
221.   
222.   // awk '/21:/,/28:/ {print "GQuadraturePoint<R2>(" $3 "/2," $1"," $2"),"}' coords.txt

src/femlib/QuadratureFormular.cpp:220:31: call to Fem2D::GQuadratureFormular<Fem2D::R2>_GQuadratureFormular
218.   GQuadraturePoint<R2>(0.2652238803946/2,R2(0.2385615300181,0.2385615300181))
219.   };
220.   const GQuadratureFormular<R2> QuadratureFormular_T_7(7,15,P_QuadratureFormular_T_7);
                                     ^
221.   
222.   // awk '/21:/,/28:/ {print "GQuadraturePoint<R2>(" $3 "/2," $1"," $2"),"}' coords.txt

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R2>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
